# ado_ai

./: .env.example  .gitignore  README.md  ado_ai.db  ado_ai.db.backup  alembic.ini  pyproject.toml  requirements.txt  reset_database.py  server_config.example.json
.claude/: settings.local.json
scripts/: generate_cert.py
src/ado_ai_cli/: __main__.py  cli.py  config.py
src/ado_ai_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ado_ai_cli/ai/: claude_client.py  prompts.py
src/ado_ai_cli/azure_devops/: client.py  models.py
src/ado_ai_cli/core/: presenter.py  workflow.py  workflow_old.py
src/ado_ai_cli/utils/: exceptions.py  logger.py
src/ado_ai_web/: main.py
src/ado_ai_web/api/: config.py  files.py  setup.py  work_items.py
src/ado_ai_web/database/: session.py
src/ado_ai_web/database/migrations/: env.py
src/ado_ai_web/database/migrations/versions/: 61290a444871_initial_migration.py
src/ado_ai_web/models/: database.py  requests.py  responses.py
src/ado_ai_web/services/: encryption.py  settings_manager.py  system_config.py  workflow_service.py
src/ado_ai_web/templates/: base.html  dashboard.html  settings.html  setup.html  work_item_detail.html  work_item_history.html
